# binary-operations

./: app.py  pyproject.toml
store/: models.py  services.py
