[tool.poetry]
name = "binary-operations"
version = "0.1.0"
description = ""
authors = ["Igor Paranhos <igor.paranhosto@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.scripts]
start = "app.py"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
